@startuml

namespace Rule {
    enum Subject {
        Path: String
        Argv: String
    }

    enum ConditionType {
        MustBeIn: String
        MustBeNotIn: String
    }

    enum RuleResult {
        Pass: String
        Fail: String
    }

    class Rule {
        +subject: Subject
        +condition: ConditionType
        +objects: Array[String]
        +behaviour_on_violation: Behaviour

        +check(record: Record): RuleResult
        -check_by_path(record: Record): RuleResult
        -check_by_argv(record: Record): RuleResult
    }
}

enum Behaviour {
    KillProcess: String
    LogOnly: String
}

class Record {
    +path: String
    +argv: Optional[Array[String]]
    +envp: Optional[Array[String]]
}

class Configuration {
    +behaviour_on_incidents: Behaviour
    +rules: Array[Rule]
    +log_path: Optional[String]

    +load(path: str): Configuration
    +save(path: str): void
}

class Analyzer {
    -configuration: Configuration

    +analyze(Record record): Behaviour
}


Behaviour --* Configuration
Rule.Rule --> Configuration

Behaviour --* Rule.Rule
Rule.ConditionType --* Rule.Rule
Rule.Subject --* Rule.Rule
Record <-- Rule.Rule
Rule.RuleResult <-- Rule.Rule

Analyzer o-- Configuration

Record <-- Analyzer

@enduml
